[gd_scene load_steps=19 format=3 uid="uid://dd64m2gtmdvrw"]

[ext_resource type="Script" path="res://scenes/player/player_movement.gd" id="1_bhge8"]
[ext_resource type="Shader" path="res://shaders/flash.gdshader" id="1_r4wub"]
[ext_resource type="AudioStream" uid="uid://b8gshngw6me2m" path="res://sounds/soundfx/jump.wav" id="2_seprg"]
[ext_resource type="AudioStream" uid="uid://dalseq7ik0b8g" path="res://sounds/soundfx/hurt.wav" id="3_ij0q0"]
[ext_resource type="PackedScene" uid="uid://dnqddk2cybhsp" path="res://scenes/cameras/camera_in_game.tscn" id="3_ps3tp"]
[ext_resource type="AudioStream" uid="uid://bjiaif337wyw2" path="res://sounds/soundfx/dash.wav" id="4_725wk"]
[ext_resource type="SpriteFrames" uid="uid://8hyayw66bd0r" path="res://scenes/player/ani_player.tres" id="7_81ax6"]
[ext_resource type="PackedScene" uid="uid://h5lvwtk1iolv" path="res://scenes/effects/light_test.tscn" id="8_4ym7f"]
[ext_resource type="Script" path="res://scenes/player/player_animate.gd" id="8_d14ph"]
[ext_resource type="PackedScene" uid="uid://ccyfefsl6cpqe" path="res://scenes/transitions/scene_transition.tscn" id="10_opffu"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_m6w3u"]
size = Vector2(6, 16)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_qbnsu"]
shader = ExtResource("1_r4wub")
shader_parameter/active = false
shader_parameter/flash_color = Color(1, 1, 1, 1)

[sub_resource type="Animation" id="Animation_lb51e"]
resource_name = "flash"
length = 0.3625
tracks/0/type = "method"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"values": [{
"args": [],
"method": &"_flash_sprite"
}, {
"args": [],
"method": &"_flash_sprite"
}, {
"args": [],
"method": &"_flash_sprite"
}, {
"args": [],
"method": &"_flash_sprite"
}]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_r31hw"]
_data = {
"flash": SubResource("Animation_lb51e")
}

[sub_resource type="Curve" id="Curve_cht06"]
resource_local_to_scene = true
_data = [Vector2(0, 0.690265), 0.0, 0.0, 0, 0, Vector2(0.990548, 0.876106), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="Gradient" id="Gradient_ltc2j"]
offsets = PackedFloat32Array(0, 0.323108, 0.783231, 1)
colors = PackedColorArray(0.219608, 0.266667, 0.541176, 0.870588, 0.184314, 0.223529, 0.466667, 1, 0.133333, 0.164706, 0.360784, 1, 0.133333, 0.164706, 0.360784, 0)

[sub_resource type="Gradient" id="Gradient_d2oq6"]
colors = PackedColorArray(0.741176, 0.121569, 0.247059, 0, 0.741176, 0.121569, 0.247059, 1)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_delou"]
size = Vector2(6, 16)

[node name="Player" type="CharacterBody2D" groups=["player"]]
light_mask = 0
collision_layer = 4
collision_mask = 195
floor_stop_on_slope = false
floor_snap_length = 4.6
script = ExtResource("1_bhge8")
ground_speed = 600.0
air_speed = 400.0
ground_friction = 48.0
dash_time = 0.1
dash_delay_time = 0.5
dash_speed = 460.0
jump_sound = ExtResource("2_seprg")
hurt_sound = ExtResource("3_ij0q0")
dash_sound = ExtResource("4_725wk")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
z_index = 1
shape = SubResource("RectangleShape2D_m6w3u")
metadata/_edit_group_ = true

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="." node_paths=PackedStringArray("character")]
process_mode = 1
light_mask = 4
z_index = 1
material = SubResource("ShaderMaterial_qbnsu")
position = Vector2(0, -8)
sprite_frames = ExtResource("7_81ax6")
animation = &"wall"
frame_progress = 0.270182
script = ExtResource("8_d14ph")
character = NodePath("..")
metadata/_edit_group_ = true

[node name="FlashAnimation" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_r31hw")
}

[node name="Line2DDash" type="Line2D" parent="."]
show_behind_parent = true
light_mask = 0
position = Vector2(1, 0)
points = PackedVector2Array(-70, 0, 0, 0)
width = 14.0
width_curve = SubResource("Curve_cht06")
default_color = Color(0.133333, 0.164706, 0.360784, 1)
gradient = SubResource("Gradient_ltc2j")
joint_mode = 2
begin_cap_mode = 2
end_cap_mode = 2
sharp_limit = 10.0
round_precision = 5

[node name="Line2DDash2" type="Line2D" parent="."]
light_mask = 0
points = PackedVector2Array(-77, -5, 0, -5)
width = 1.0
default_color = Color(0.741176, 0.121569, 0.247059, 1)
gradient = SubResource("Gradient_d2oq6")

[node name="LightTest" parent="." instance=ExtResource("8_4ym7f")]
position = Vector2(0, -3)
color = Color(0.996078, 0.996078, 0.996078, 1)
energy = 0.6
shadow_color = Color(0, 0, 0, 0.882353)
shadow_filter = 1
shadow_filter_smooth = 3.0
texture_scale = 4.34

[node name="SceneTransition" parent="." instance=ExtResource("10_opffu")]
transition_name = "fade_in"

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 4
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("RectangleShape2D_delou")

[node name="CameraInGame" parent="." instance=ExtResource("3_ps3tp")]
ignore_rotation = false

[connection signal="animation_looped" from="AnimatedSprite2D" to="AnimatedSprite2D" method="_on_animation_looped"]
